--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--BARRA DE NAVEGACIÓN-->
     <header>
         <nav>
             <ul>
@@ -26,6 +27,7 @@
             </ul>
         </nav>
     </header>
+    <!--SECCIÓN PRINCIPAL-->
     <main>
         <div>
             <h1>
@@ -42,6 +44,7 @@
             <img src="" alt="">
         </div>
     </main>
+    <!--SECCIÓN DE SKILLS-->
     <section>
         <h2>
             Mis conocimientos
@@ -77,6 +80,7 @@
             </article>
         </div>
     </section>
+    <!--SECCIÓN SOBRE MÍ-->
     <section>
         <img src="" alt="">
         <p>
@@ -86,6 +90,7 @@
             Sobre mí
         </h2>
     </section>
+    <!--SECCIÓN DE PROYECTOS PARA ACTUALIZAR-->
     <section>
         <h2>
             Mis proyectos
@@ -117,6 +122,7 @@
             </article>
         </div>
     </section>
+    <!--FORMULARIO-->
     <section>
         <div>
             <div>
@@ -162,6 +168,7 @@
             </form>
         </div>
     </section>
+    <!--PIE DE PÁGINA-->
     <footer>
         <ul>
             <li>
