se aplicaron estilos a la barra de navegación

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--BARRA DE NAVEGACIÓN-->
@@ -21,10 +24,10 @@
                 <li>
                     Proyectos
                 </li>
-                <li class="boton">
-                    Contacto
-                </li>
             </ul>
+            <button class="boton">
+                Contacto
+            </button>
         </nav>
     </header>
     <!--SECCIÓN PRINCIPAL-->
@@ -81,7 +84,7 @@
         </div>
     </section>
     <!--SECCIÓN SOBRE MÍ-->
-    <section class="contenedor-secundario">
+    <section class="contenedor-terciario">
         <img src="" alt="">
         <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati quam, maxime consequuntur ea pariatur dolore molestias et nostrum amet alias.
@@ -174,7 +177,7 @@
         </div>
     </section>
     <!--PIE DE PÁGINA-->
-    <footer>
+    <footer class="contenedor-terciario">
         <ul>
             <li>
                 Hola
