finalización del contenedor principal

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </button>
         </div>
         <div class="contenedor-imagen">
-            <img src="" alt="">
+            <img src="./images/imagen-principal.svg" alt="Imagen representativa">
         </div>
     </main>
     <!--SECCIÓN DE SKILLS-->
