Se terminaron estilos de la sección de conocimientos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main class="contenedor">
         <div class="contenedor-principal">
             <h1>
-                ¡Hola! Soy <span class="texto-resaltado">Kenia Montalvo </span>
+                ¡Hola! Soy <br><span class="texto-resaltado">Kenia Montalvo </span>
             </h1>
             <p>
                 Desarrolladora, coleccionista de álbumes y ARMY de BTS
@@ -53,33 +53,54 @@
             Mis conocimientos
         </h2>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis minus asperiores itaque mollitia delectus dolor quasi maiores nisi vero perspiciatis.
+            He desarrollado un conjunto diverso de habilidades que abarcan tanto técnicas y personales como el uso de diversas herramientas y software que son fundamentales para la gestión de proyectos y el diseño colaborativo.
         </p>
         <div class="contenedor-tarjetas">
             <article class="tarjeta">
-                HTML 5
+                <img src="./images/html-5.png" alt="Imagen de HTML">
+                <h4>
+                    HTML 5
+                </h4>
             </article>
             <article class="tarjeta">
-                CSS 3
+                <img src="./images/css-3.png" alt="Imagen de CSS">
+                <h4>
+                    CSS 3
+                </h4>
             </article>
             <article class="tarjeta">
-                JavaScript
+                <img src="./images/js.png" alt="Imagen de JavaScript">
+                <h4>
+                    JavaScript
+                </h4>
             </article>
             <article class="tarjeta">
-                GIT
+                <img src="./images/git.png" alt="">
+                <h4>
+                    GIT
+                </h4>
             </article>
         </div>
         <div class="contenedor-tarjetas">
             <article class="tarjeta">
-                Trello
+                <img src="./images/trello.png" alt="Imagen de Trello">
+                <h4>
+                    Trello
+                </h4>
             </article>
             <article class="tarjeta">
-                Figma
+                <img src="./images/figma.png" alt="Imagen de Figma">
+                <h4>
+                    Figma
+                </h4>
             </article>
         </div>
         <div class="contenedor-tarjetas">
             <article class="tarjeta">
-                Metodología Ágil
+                <img src="./images/agile.png" alt="Imagen representativa de la Metodología Ágil">
+                <h4>
+                    Metodología Ágil
+                </h4>
             </article class="tarjeta">
         </div>
     </section>
