se añadió una breve descripción sobre mí

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
     </section>
     <!--SECCIÓN SOBRE MÍ-->
     <section class="contenedor-terciario">
-        <img src="" alt="">
+        <img src="./images/quotation-right-mark.png" alt="Imagen de comillas">
         <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati quam, maxime consequuntur ea pariatur dolore molestias et nostrum amet alias.
+            Me considero una comunicadora habilidosa permitiéndome trabajar de manera efectiva en proyectos multidisciplinarios. Disfruto colaborar con otros profesionales, ya sea en un entorno ágil o en equipos interfuncionales. Tengo la capacidad de contribuir de manera constructiva, escuchar diferentes perspectivas y trabajar en conjunto para lograr objetivos comunes. Me enfrento a los desafíos con una mentalidad analítica y creativa, prestando atención a los detalles me aseguro de que el código sea limpio, bien estructurado y siga las mejores prácticas. Estoy constantemente buscando oportunidades para mejorar y optimizar mi trabajo.
         </p>
         <h2>
             Sobre mí
@@ -120,7 +120,7 @@
             Mis proyectos
         </h2>
         <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem, voluptas! Quam fugit dolorum veritatis consectetur culpa dolore nemo accusamus dignissimos.
+            Explora mi colección de proyectos donde exploré diferentes conceptos y tecnologías para aprender y practicar. Desde diseños responsivos hasta interacciones interactivas.
         </p>
         <div class="contenedor-tarjetas">
             <article class="tarjeta">
