colocación de proyectos

--- a/index.html
+++ b/index.html
@@ -122,27 +122,60 @@
         <p>
             Explora mi colección de proyectos donde exploré diferentes conceptos y tecnologías para aprender y practicar. Desde diseños responsivos hasta interacciones interactivas.
         </p>
-        <div class="contenedor-tarjetas">
+        <div class="contenedor-proyectos">
             <article class="tarjeta">
-                Portfolio
+                <img src="./images/undraw_experience_design_re_dmqq.svg" alt="Portfolio">
+                <a href="">
+                    Portfolio
+                </a>
             </article>
             <article class="tarjeta">
-                Próximo Generador de memes
+                <img src="./images/undraw_electricity_k2ft.svg" alt="Generador de memes">
+                <a href="#">
+                    Próximo Generador de memes
+                </a>
             </article>
             <article class="tarjeta">
-                Próximo Match 3
+                <img src="./images/undraw_not_found_re_bh2e.svg" alt="Match 3">
+                <a href="#">
+                    Próximo Match 3
+                </a>
             </article>
             <article class="tarjeta">
-                Próximo Controlador de gastos
+                <img src="./images/undraw_bitcoin_re_urgq.svg" alt="Controlador de Gastos">
+                <a href="#">
+                    Próximo Controlador de gastos
+                </a>
             </article>
             <article class="tarjeta">
-                Próximo Administrador de reuniones
+                <img src="./images/undraw_happy_new_year_di92.svg" alt="Administrador de reuniones">
+                <a href="#">
+                    Próximo Administrador de reuniones
+                </a>
             </article>
             <article class="tarjeta">
-                Próximo Todo App
+                <img src="./images/undraw_search_app_oso2.svg" alt="Todo App">
+                <a href="#">
+                    Próximo Todo App
+                </a>
             </article>
             <article class="tarjeta">
-                Próximo Buscador de películas
+                <img src="./images/undraw_search_engines_ij7q.svg" alt="Buscador de Películas">
+                <a href="#">
+                    Próximo Buscador de películas
+                </a>
+            </article>
+            <article class="tarjeta">
+                <img src="./images/undraw_audio_conversation_re_3t38.svg" alt="Buscador de Películas">
+                <a href="https://keniamontalvo.github.io/landingkpop/">
+                    Página de Ventas Kpop
+                </a>
+            </article>
+            <article class="tarjeta">
+                <img src="./images/undraw_online_test_re_kyfx.svg" alt="Buscador de Películas">
+                <a href="https://keniamontalvo-clonaciongoogle.netlify.app/">
+                    Clonación de Google
+                </a>
             </article>
         </div>
     </section>
