se completó el 50% de la sección de contacto

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </h2>
     </section>
     <!--SECCIÓN DE PROYECTOS PARA ACTUALIZAR-->
-    <section class="contenedor-secundario">
+    <section class="contenedor-secundario fondo-blanco">
         <h2>
             Mis proyectos
         </h2>
@@ -180,27 +180,39 @@
         </div>
     </section>
     <!--FORMULARIO-->
-    <section class="contenedor-secundario">
+    <section class="contenedor-contacto">
         <div class="contenedor-flotante">
             <div class="contacto">
                 <h2>
                     Contáctame
                 </h2>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi, velit. Placeat adipisci enim, veniam fugit rem dicta obcaecati sint doloribus!
+                    Estoy disponible para oportunidades laborales, colaboraciones y proyectos emocionantes. ¡No dudes en enviarme un mensaje y estaré encantada de responderte lo antes posible!
                 </p>
-                <ul>
+                <ul class="redes-sociales">
                     <li>
-                        @kenia_montalvo
+                        <img src="./images/instagram.png" alt="">
+                        <a href="#">
+                            @kenia_montalvo
+                        </a>
                     </li>
                     <li>
-                        KeniaMontalvo
+                        <img src="./images/github.png" alt="">
+                        <a href="#">
+                            KeniaMontalvo
+                        </a>
                     </li>
                     <li>
-                        kenia-montalvo
+                        <img src="./images/linkedin.png" alt="">
+                        <a href="#">
+                            kenia-montalvo
+                        </a>
                     </li>
                     <li>
-                        kenlimonra@gmail.com
+                        <img src="./images/gmail.png" alt="">
+                        <a href="#">
+                            kenlimonra@gmail.com
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -225,7 +237,7 @@
                         Mensaje*
                     </label>
                     <textarea name="" id="" cols="30" rows="10"></textarea>
-                    <input type="submit" value="ENVIAR">
+                    <input type="submit" value="ENVIAR" class="boton-envio">
                 </form>
             </div>
         </div>
