finalización del footer

--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
         </div>
     </section>
     <!--PIE DE PÁGINA-->
-    <footer class="contenedor-terciario">
-        <ul>
+    <footer class="contenedor-final">
+        <ul class="lista-final">
             <li>
                 Hola
             </li>
@@ -262,8 +262,30 @@
                 Contacto
             </li>
         </ul>
-        <p>
-            Hecho con 💜 por Kenia
+        <ul class="redes-sociales lista-final">
+            <li>
+                <a href="">
+                    <img src="/images/instagram.png" alt="">
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="/images/github.png" alt="">
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="/images/linkedin.png" alt="">
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="/images/gmail.png" alt="">
+                </a>
+            </li>
+        </ul>
+        <p class="texto-pie-de-pagina">
+            Hecho con 🤍 por Kenia
         </p>
     </footer>
 </body>
