se deployó y agregó la URL del portfolio

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="contenedor-proyectos">
             <article class="tarjeta">
                 <img src="./images/undraw_experience_design_re_dmqq.svg" alt="Portfolio">
-                <a href="">
+                <a href="https://keniamontalvo.github.io/portafolio/" target="_blank">
                     Portfolio
                 </a>
             </article>
@@ -323,6 +323,6 @@
             Hecho con 🤍 por Kenia
         </p>
     </footer>
-    
+
 </body>
 </html>
