se modificó el url de las imágenes

--- a/index.html
+++ b/index.html
@@ -215,25 +215,25 @@
                 </p>
                 <ul class="redes-sociales">
                     <li>
-                        <img src="/images/instagram.png" alt="Usuario de Instagram">
+                        <img src="./images/instagram.png" alt="Usuario de Instagram">
                         <a href="https://www.instagram.com/kenia_montalvo/" target="_blank">
                             @kenia_montalvo
                         </a>
                     </li>
                     <li>
-                        <img src="/images/github.png" alt="Usuario de GitHub">
+                        <img src="./images/github.png" alt="Usuario de GitHub">
                         <a href="https://github.com/KeniaMontalvo" target="_blank">
                             KeniaMontalvo
                         </a>
                     </li>
                     <li>
-                        <img src="/images/linkedin.png" alt="Usuario de Linkedin">
+                        <img src="./images/linkedin.png" alt="Usuario de Linkedin">
                         <a href="https://www.linkedin.com/in/kenia-montalvo/" target="_blank">
                             kenia-montalvo
                         </a>
                     </li>
                     <li>
-                        <img src="/images/gmail.png" alt="Correo electrónico">
+                        <img src="./images/gmail.png" alt="Correo electrónico">
                         <a href="#">
                             kenlimonra@gmail.com
                         </a>
@@ -300,22 +300,22 @@
         <ul class="redes-sociales lista-final">
             <li>
                 <a href="https://www.instagram.com/kenia_montalvo/" target="_blank">
-                    <img src="/images/instagram.png" alt="Enlace a Instagram">
+                    <img src="./images/instagram.png" alt="Enlace a Instagram">
                 </a>
             </li>
             <li>
                 <a href="https://github.com/KeniaMontalvo" target="_blank">
-                    <img src="/images/github.png" alt="Enlace a Github">
+                    <img src="./images/github.png" alt="Enlace a Github">
                 </a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/kenia-montalvo/" target="_blank">
-                    <img src="/images/linkedin.png" alt="Enlace a Linkedin">
+                    <img src="./images/linkedin.png" alt="Enlace a Linkedin">
                 </a>
             </li>
             <li>
                 <a href="#info-contacto">
-                    <img src="/images/gmail.png" alt="Enlace a contacto">
+                    <img src="./images/gmail.png" alt="Enlace a contacto">
                 </a>
             </li>
         </ul>
